# vita-utility

./: CMakeLists.txt  LICENSE  README.md
CpuCoreSync/: exports.yml
CpuWaitCore3/: CMakeLists.txt  exports.yml
CpuWaitCore3/src/: main.c
KernelCustomMalloc/: CMakeLists.txt
SceVfsMountPoC/: CMakeLists.txt  exports.yml
SceVfsMountPoC/src/: cpu.S  etc.h  item_mgr.c  item_mgr.h  main.c  map_conf1.c  module_kernel.c  sce_cpu.h  sysroot_kblparam.c  sysroot_kblparam.h  vfs.h
kernel/: CMakeLists.txt  README.md
kernel/ArmMemoryAccessTester/: CMakeLists.txt  exports.yml
kernel/ArmMemoryAccessTester/src/: main.c
kernel/CorelockSample/: CMakeLists.txt  exports.yml
kernel/CorelockSample/src/: main.c
kernel/CpuCoreSync/: CMakeLists.txt
kernel/CpuCoreSync/src/: main.c
kernel/DevkitTV/: CMakeLists.txt  exports.yml
kernel/DevkitTV/src/: main.c
kernel/FixedHeap-Test/: CMakeLists.txt  build.sh  exports.yml
kernel/FixedHeap-Test/src/: main.c
kernel/KernelCustomMalloc/: CMakeLists.txt  exports.yml
kernel/KernelCustomMalloc/src/: main.c
kernel/MappingVaddrSample/: CMakeLists.txt  exports.yml
kernel/MappingVaddrSample/src/: main.c
kernel/SceDeci4pRDrfpUnlimited/: CMakeLists.txt  exports.yml
kernel/SceDeci4pRDrfpUnlimited/src/: main.c
kernel/SceErrorHelper/: CMakeLists.txt  exports.yml
kernel/SceErrorHelper/src/: main.c
kernel/SceExfatfsAnalysis/: CMakeLists.txt
kernel/SceExfatfsAnalysis/src/: log.h  main.c
kernel/SceHwbkptTest/: CMakeLists.txt  exports.yml
kernel/SceHwbkptTest/src/: main.c
kernel/SceIofilemgrAnalysis/: CMakeLists.txt  exports.yml
kernel/SceIofilemgrAnalysis/src/: log.c  log.h  main.c
kernel/SceKernelPanicDebugger/: CMakeLists.txt  exports.yml
kernel/SceKernelPanicDebugger/src/: main.c
kernel/ScePfsMgrAllowDbgPfsPatch/: CMakeLists.txt  exports.yml
kernel/ScePfsMgrAllowDbgPfsPatch/src/: main.c
kernel/SceSdstorAnalysis/: CMakeLists.txt  exports.yml
kernel/SceSdstorAnalysis/src/: log.c  log.h  main.c
kernel/SceUsbstorVstorFat16/: CMakeLists.txt  exports.yml
kernel/SceUsbstorVstorFat16/src/: main.c
kernel/SceVfsMountPoC/: CMakeLists.txt  exports.yml
kernel/SceVfsMountPoC/src/: dmass_process.c  dmass_process.h  etc.c  fs_mgr.c  fs_tool.c  fs_tool.h  main.c  map_conf1.h  module_kernel.h  sce_cpu.c  vfs.h
kernel/SceVfsMountPoC_old/: CMakeLists.txt
kernel/SceVfsMountPoC_old/src/: fs_mgr.h  main.c
kernel/SceZlibSample/: CMakeLists.txt  exports.yml
kernel/SceZlibSample/src/: main.c
kernel/act_verifier/: CMakeLists.txt  exports.yml
kernel/act_verifier/src/: aes256cmac.h  main.c
kernel/activate_reset/: CMakeLists.txt  export.yml
kernel/activate_reset/src/: main.c
kernel/appmgr_test/: CMakeLists.txt  exports.yml
kernel/appmgr_test/src/: main.c
kernel/dipsw_show/: CMakeLists.txt  exports.yml
kernel/dipsw_show/src/: main.c
kernel/emmc_dumper/: CMakeLists.txt  exports.yml
kernel/emmc_dumper/src/: main.c
kernel/idstorage_dumper/: CMakeLists.txt  exports.yml
kernel/idstorage_dumper/src/: main.c
kernel/idstorage_raw_dumper/: CMakeLists.txt  exports.yml
kernel/idstorage_raw_dumper/src/: main.c
kernel/idstorage_verifier/: CMakeLists.txt  exports.yml
kernel/idstorage_verifier/src/: cert.h  kirk.h  main.c
kernel/iofilemgr_scheduler_log/: CMakeLists.txt  export.yml
kernel/iofilemgr_scheduler_log/src/: main.c
kernel/iofilemgr_test/: CMakeLists.txt  exports.yml
kernel/iofilemgr_test/src/: main.c
kernel/kblparam_dumper/: CMakeLists.txt  exports.yml
kernel/kblparam_dumper/src/: main.c
kernel/kpanic_debug/: CMakeLists.txt  exports.yml
kernel/kpanic_debug/src/: main.c
kernel/mac_address_spoofer/: CMakeLists.txt  exports.yml
kernel/mac_address_spoofer/src/: main.c
kernel/malloc_free_test_kernel/: CMakeLists.txt  exports.yml
kernel/malloc_free_test_kernel/src/: main.c
kernel/map_user_memblk_by_paddr/: CMakeLists.txt  exports.yml
kernel/map_user_memblk_by_paddr/src/: main.c
kernel/netps_kernel_recv_fix/: CMakeLists.txt  build.sh  exports.yml
kernel/netps_kernel_recv_fix/src/: main.c
kernel/noSuspend/: CMakeLists.txt
kernel/noSuspend/src/: main.c
kernel/noSuspendMini/: CMakeLists.txt  exports.yml
kernel/noSuspendMini/src/: main.c
kernel/np_act_verifier/: CMakeLists.txt  exports.yml
kernel/np_act_verifier/src/: main.c
kernel/nvs_dumper/: CMakeLists.txt  exports.yml
kernel/nvs_dumper/src/: main.c
kernel/pmu_test/: CMakeLists.txt  exports.yml
kernel/pmu_test/src/: main.c  pmu.S  pmu.h
kernel/qaf_host0/: CMakeLists.txt  exports.yml
kernel/qaf_host0/src/: main.c
kernel/qaf_show/: CMakeLists.txt  exports.yml
kernel/qaf_show/src/: main.c
kernel/sce_fios2kernel_tester/: CMakeLists.txt  build.sh  exports.yml
kernel/sce_fios2kernel_tester/src/: main.c
kernel/slb2_dumper/: CMakeLists.txt  exports.yml
kernel/slb2_dumper/src/: main.c
kernel/syscon_vs_dumper/: CMakeLists.txt  exports.yml
kernel/sysmem_guid_tester/: CMakeLists.txt  exports.yml
kernel/sysmem_guid_tester/src/: main.c
kernel/sysmem_print_guid_info/: CMakeLists.txt  exports.yml
kernel/sysmem_print_guid_info/src/: main.c
kernel/update_sw_list/: CMakeLists.txt  build.sh  exports.yml
kernel/update_sw_list/src/: main.c
kernel/visible_id_dumper/: CMakeLists.txt  exports.yml
kernel/visible_id_dumper/src/: main.c
user/: CMakeLists.txt  README.md
user/PafCustomMalloc/: CMakeLists.txt
user/PafCustomMalloc/libpaf/: CMakeLists.txt  ScePaf.yml
user/PafCustomMalloc/src/: main.c  paf.h
user/SceSysRw/: CMakeLists.txt  exports.yml
user/SceSysRw/src/: main.c
user/VideoDebugger/: CMakeLists.txt  exports.yml
user/VideoDebugger/src/: main.c
user/kernel_module_loader/: CMakeLists.txt  exports.yml
user/kernel_module_loader/src/: main.c
user/malloc_free_test_user/: CMakeLists.txt  exports.yml
user/malloc_free_test_user/src/: main.c
user/npdrm_act_guard/: CMakeLists.txt  exports.yml
user/npdrm_act_guard/src/: main.c
user/npdrm_package/: CMakeLists.txt  exports.yml
user/npdrm_package/src/: main.c
user/repaf/: CMakeLists.txt  exports.yml
user/repaf/src/: main.c
(+21 files in other folders)
